--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="description" content="Home Page of Keon Kim, Software Engineer!">
     <meta name="author" content="Keon Kim">
     <link href="http://fonts.googleapis.com/css?family=Source+Code+Pro:400,600,700" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="./css/jquery.terminal.css">
+    <link rel="stylesheet" href="./css/jquery.terminal-1.10.1.css">
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="./js/mousewheel-3.1.13.js" type="text/javascript"></script>
-    <script src="./js/jquery.terminal-0.8.8.min.js" type="text/javascript"></script>
+    <script src="./js/jquery.terminal-1.10.1.js" type="text/javascript"></script>
     <script src="./js/script.js"></script>
 
   </body>
