--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>-->
+
+    <script
+            src="https://code.jquery.com/jquery-2.2.4.min.js"
+            integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+            crossorigin="anonymous"></script>
+
     <script src="./js/mousewheel-3.1.13.js" type="text/javascript"></script>
     <script src="./js/jquery.terminal-1.10.1.js" type="text/javascript"></script>
     <script src="./js/script.js"></script>
